# ltm

./: .gitignore  README.md  app
database/: message.json  project.json  projects.json  task.json  users.json
src/: CMakeLists.txt  chat_management.c  chat_management.h  file_utils.c  file_utils.h  main.c  member_management.c  member_management.h  project_management.c  project_management.h  server.c  task_management.c  task_management.h  user_management.c  user_management.h
